# ai-sandbox

./: README.md
.claude/: settings.local.json
botasaurus-mcp-server/: .gitignore  Dockerfile  README.md  claude_desktop_config.example.json  pyproject.toml  requirements.txt
botasaurus-mcp-server/src/: __init__.py  botasaurus_server.py
forgejo-clone/: README.md  VALIDATION.md  index.html  package-lock.json  package.json
forgejo-clone/src/: App.svelte  app.css
forgejo-clone/src/lib/: Features.svelte  Footer.svelte  Header.svelte  Hero.svelte
slint-test/: .gitignore  BROWSER_APP_VERIFICATION.md  Cargo.toml  FORGEJO_LAYOUT.md  README.md  VERIFICATION.md
slint-test/.claude/: settings.local.json
slint-test/src/: lib.rs  main.rs  server.rs
slint-test/ui/: appwindow.slint
